Temporary fix in 'what' and 'why' spacing and alignment issue.  Still messed up between 700 to 800 px of viewport width.

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
 
 .description {
 	display: inline-block;
+	margin: 3em auto;
 }
 
 .description section {
@@ -31,24 +32,17 @@
 	width: 40%;
 	vertical-align: top;
 	background: rgba(179, 208, 242, 0.5);
-	margin-top: 3em;
 	padding: 1em;
 }
 
 .what {
-	margin-left: 1.5em;
-	margin-right: 5em;
-	margin: 0 auto;
-	margin-bottom: 5em;
+	margin-right: 1.5em;
+	
 }
-
-.why {
-	margin: 0 auto;
-}
-
 .what, .why {
 	border: 0.25em solid #849BB5;
   border-radius: 0.25em;
+  margin-left: 1.5em;
 }
 
 button {
